--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ben Huang",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.849.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongodb": "^6.17.0",
